Bug 697640 - Ignore self-dependent end instance times when determining if an open-ended interval is ok; r=dholbert